--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <h1>Realtime communication with WebRTC</h1>
 
   <div id="videos">
-    <video id="localVideo" autoplay muted playsinline></video>
-    <video id="remoteVideo" autoplay playsinline></video>
+    <video id="localVideo" autoplay muted playsinline playsinline="true"></video>
+    <video id="remoteVideo" autoplay playsinline playsinline="true"></video>
   </div>
 
   <!-- This file is automatically added/served when running "node index.js". -->
