--- a/index.html
+++ b/index.html
@@ -3,18 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <title>Realtime communication with WebRTC</title>
+  <title>돌보다 원격화상진료</title>
   <link rel="stylesheet" href="/css/main.css" />
-
+  <style>
+    body { margin: 0;}
+    .rtc-tab { position: absolute; width: 100%; height: 100%; background-color: rgba(0,0,0,.6); color: #fff; }
+    .rtc {  
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 5px;
+      min-width: 500px;
+      max-width: 900px;
+    }
+    video {
+      border-radius: 10px;
+    }
+  </style>
 </head>
 
 <body>
-
-  <h1>Realtime communication with WebRTC</h1>
-
-  <div id="videos">
-    <video id="localVideo" autoplay="true" muted="true" playsinline="true"></video>
-    <video id="remoteVideo" autoplay="true" playsinline="true"></video>
+  <div class="rtc-tab">
+    <div class="rtc">
+      <h1>돌보다 원격화상진료</h1>
+    
+      <div id="videos">
+        <video id="localVideo" autoplay="true" muted="true" playsinline="true"></video>
+        <video id="remoteVideo" autoplay="true" playsinline="true"></video>
+      </div>
+    </div>
   </div>
 
   <!-- This file is automatically added/served when running "node index.js". -->
